Tue Aug 26 09:21:44 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          When checking for the -k option, remove --unix from the MAKEFLAGS
          value.  This helps things work with Cygwin.  Thanks to Johnny
          Willemsen for reporting this.

Tue Aug 26 08:37:21 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Kokyu/DSRT_Sched_Queue_T.h: Changed the prototype of
          Guid_Hash::operator method with full qualification for the
          Guid_t type. This is to fix compile errors in
          SunOS_8_Forte8_Debug build.

        * Kokyu/Kokyu.h:
        * Kokyu/Kokyu_defs.h:
        * Kokyu/Kokyu_dsrt.h:
        * Kokyu/DSRT_Dispatch_Item_T.h:
        * Kokyu/DSRT_Direct_Dispatcher_Impl_T.h:
        * Kokyu/Kokyu_defs.i:
          Replaced non_copyable with ACE_Copy_Disabled.

Tue Aug 26 08:24:09 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/MakeWorkspaceCreator.pm:

          Set PWD on the make command line when the project makefile isn't
          in the current directory.

Mon Aug 25 22:03:43 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ASNMP/asnmp/address.cpp:
        * ASNMP/asnmp/address.h:
        * ASNMP/asnmp/ctr64.cpp:
        * ASNMP/asnmp/ctr64.h:
        * ASNMP/asnmp/integer.cpp:
        * ASNMP/asnmp/integer.h:
        * ASNMP/asnmp/target.cpp:
        * ASNMP/asnmp/target.h:
        * ASNMP/asnmp/timetick.cpp:
        * ASNMP/asnmp/timetick.h:
          Fixed additional const compilation errors.

        * ASNMP/tests/tests.mpc:
          Added new mpc file.

        * ASNMP/tests/Address_Test.cpp:
        * ASNMP/tests/Target_Test.cpp:
          Removed unused variables to quash warnings.

        * ASNMP/tests/test_config.h:
          Added #include streams.h and removed old style headers; changed
          use of open() flags to correct type.
