@@ -25,3 +25,13 @@ void Dispatch_Command::destroy (void)
 }
 
 }
+
+//to satisfy ACE_Array<ConfigInfo>
+ACE_INLINE
+int operator != (const Kokyu::ConfigInfo& lhs, 
+                 const Kokyu::ConfigInfo& rhs)
+{
+  return (lhs.preemption_priority_ != rhs.preemption_priority_ ||
+          lhs.thread_priority_ != rhs.thread_priority_ ||
+          lhs.dispatching_type_ != rhs.dispatching_type_ );
+}
